Stopped using Java features after Java 11